# chitin

./: .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: build-wasm.yml  ci.yml  release-lite.yml  release-python.yml  release-web.yml
docs/: architecture.md  phys.md  plan-compiler-pipeline.md  plan-quality.md  plan-snugfit.md  usage.md
examples/utility-proof/: README.md  datasets.toml  download.py  run_proof.py
integrations/unity/: package.json
integrations/unity/Editor/: PhysImporter.cs
integrations/unity/Runtime/: PhysData.cs  PhysReader.cs
integrations/unreal/: ChitinImporter.uplugin
integrations/unreal/Source/ChitinImporter/: ChitinImporter.Build.cs
integrations/unreal/Source/ChitinImporter/Private/: ChitinImporterModule.cpp  (+2 more)
integrations/walktest/: package-lock.json  package.json  playwright.config.ts
integrations/walktest/harness/: index.html  scene.ts
integrations/walktest/tests/: walktest.spec.ts
integrations/wasm/: README.md  build.sh
integrations/wasm-lite/: README.md  package-lock.json  package.json
integrations/wasm-lite/src/: decompose.ts  errors.ts  index.ts  phys-writer.ts  types.ts
integrations/wasm-lite/test/: phys-writer.test.ts
integrations/wasm/src/: coacd_bind.cpp
integrations/wasm/test/: decompose.test.cjs
integrations/web/: README.md  package-lock.json  package.json
integrations/web/src/: index.ts  phys-parser.ts  rapier.ts  three.ts
integrations/web/test/: conformance.test.ts  golden_rigged.phys  phys-parser.test.ts  unaligned_bind.phys
integrations/web/test/conformance/: invalid_bone_index.phys  invalid_lod_offset.phys  invalid_nan_bind.phys  invalid_overlapping_range.phys  invalid_trailing.phys  rigged.phys
scripts/: compare_bundles.py  determinism_repro.py
src/chitin/: __init__.py  _poisson_worker.py  analyze.py  cli.py  config.py  convert.py  core.py  gltf_skin.py  hooks.py  phys.py  plan.py  preflight.py  probe.py  resolve.py  result.py  sweep.py
src/chitin/adapters/: __init__.py  gltf.py  mesh.py  ply.py  ply_reader.py  usd.py
src/chitin/exporters/: bundle.py  json.py  phys.py  usd.py
src/chitin/stages/: _coacd_worker.py  decompose.py  filter.py  flatness.py  normalize.py  occlusion.py  reconstruct.py  repair.py  segment.py  snugfit.py  splat.py
src/chitin/verify/: convex.py  coverage.py  probe.py  raycast.py  seam.py  sweep.py
src/chitin_service/: __init__.py  app.py  cli.py  models.py  store.py  worker.py
tests/: __init__.py  conftest.py  test_adaptive_resolution.py  test_analyze.py  test_build_plan.py  test_config.py  test_convert.py  test_coverage.py  test_decimate.py  test_flatness.py  test_mesh.py  test_normalize.py  test_phys_binary.py  test_ply_reader.py  test_point_cloud.py  test_reconstruct.py  test_report.py  test_rigged.py  test_seam.py  test_serialization.py  test_service.py  test_snugfit.py
tests/conformance/: build_fixtures.py  manifest.json  test_conformance.py
tests/conformance/fixtures/: invalid_lod_nan_aabb.phys  invalid_magic.phys  invalid_nan_aabb.phys  invalid_truncated.phys  invalid_version.phys  invalid_vertex_offset.phys  multi_lod.phys  static_hull.phys
(+3 files in other folders)
