[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "chitin"
version = "0.1.0"
description = "Convex collision geometry from point clouds, meshes, and gaussian splats"
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
authors = [{ name = "Boris Blosse" }]
keywords = ["physics", "collision", "convex-decomposition", "gaussian-splatting", "usd", "robotics"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Multimedia :: Graphics :: 3D Modeling",
]
dependencies = [
    "numpy>=1.26",
    "open3d>=0.18",
    "coacd>=1.0",
    "trimesh>=4.0",
    "plyfile>=1.0",
    "psutil>=5.9",
]

[project.optional-dependencies]
usd = ["usd-core>=24.0"]
service = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "python-multipart>=0.0.9",
    "httpx>=0.27",
]
all = ["chitin[usd,service]"]
dev = [
    "chitin[all]",
    "pytest>=8.0",
    "httpx>=0.27",
    "ruff>=0.4",
]

[project.scripts]
chitin = "chitin.cli:main"
chitin-server = "chitin_service.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/chitin", "src/chitin_service"]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.format]
quote-style = "double"

[tool.pytest.ini_options]
testpaths = ["tests"]
