[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "chitin"
version = "0.1.0"
description = "Convex collision geometry from point clouds, meshes, and gaussian splats"
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
authors = [{ name = "Boris Blosse" }]
keywords = ["physics", "collision", "convex-decomposition", "gaussian-splatting", "usd", "robotics"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Multimedia :: Graphics :: 3D Modeling",
]
dependencies = [
    "numpy>=1.26",
    "coacd>=1.0",
    "trimesh>=4.0",
    "plyfile>=1.0",
    "psutil>=5.9",
]

[project.optional-dependencies]
splat = [
    "open3d>=0.18",
    "scipy>=1.10",
]
usd = ["usd-core>=24.0"]
service = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "python-multipart>=0.0.9",
    "httpx>=0.27",
]
all = ["chitin[splat,usd,service]"]
dev = [
    "chitin[all]",
    "pytest>=8.0",
    "pytest-timeout>=2.3",
    "httpx>=0.27",
    "ruff>=0.4",
]

[project.scripts]
chitin = "chitin.cli:main"
chitin-server = "chitin_service.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/chitin", "src/chitin_service"]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.format]
quote-style = "double"

[tool.pytest.ini_options]
testpaths = ["tests"]
# Hard ceiling so a deadlocked test fails fast instead of freezing CI. The
# "thread" method (not "signal") dumps every thread's stack and hard-exits on
# timeout, so it can break a C-level deadlock (e.g. open3d/OpenMP) that a Python
# SIGALRM handler cannot interrupt -- and the dump names the stuck test + call.
timeout = 180
timeout_method = "thread"
